// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 45px;
  padding: 2px;
  line-height: 45px;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
  min-width: 0;
}

.c3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-height: 0;
}

.c4 {
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 0;
}

<div>
  <header
    className="c0"
  >
    <p>
      Header
    </p>
  </header>
  <section
    className="c1"
  >
    <aside
      className="c2"
    >
      <p>
        Sidebar
      </p>
    </aside>
  </section>
  <main
    className="c3"
  >
    <p>
      Main
    </p>
  </main>
  <footer
    className="c4"
  >
    <p>
      Footer
    </p>
  </footer>
</div>
`;

exports[`it works nested 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 45px;
  padding: 2px;
  line-height: 45px;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
  min-width: 0;
}

.c3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-height: 0;
}

.c4 {
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 0;
}

<div>
  <header
    className="c0"
  >
    <p>
      Header
    </p>
  </header>
  <section
    className="c1"
  >
    <aside
      className="c2"
    >
      <p>
        Sidebar
      </p>
    </aside>
  </section>
  <main
    className="c3"
  >
    <p>
      Main
    </p>
    <div>
      <section
        className="c1"
      >
        <aside
          className="c2"
        >
          <p>
            Sidebar
          </p>
        </aside>
      </section>
      <main
        className="c3"
      >
        <p>
          Nested
        </p>
      </main>
    </div>
  </main>
  <footer
    className="c4"
  >
    <p>
      Footer
    </p>
  </footer>
</div>
`;

exports[`it works without footer 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 45px;
  padding: 2px;
  line-height: 45px;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
  min-width: 0;
}

.c3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-height: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 0;
}

<div>
  <header
    className="c0"
  >
    <p>
      Header
    </p>
  </header>
  <section
    className="c1"
  >
    <aside
      className="c2"
    >
      <p>
        Sidebar
      </p>
    </aside>
  </section>
  <main
    className="c3"
  >
    <p>
      Main
    </p>
  </main>
</div>
`;

exports[`it works without header 1`] = `
.c1 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
  min-width: 0;
}

.c2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-height: 0;
}

.c3 {
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 0;
}

<div>
  <section
    className="c0"
  >
    <aside
      className="c1"
    >
      <p>
        Sidebar
      </p>
    </aside>
  </section>
  <main
    className="c2"
  >
    <p>
      Main
    </p>
  </main>
  <footer
    className="c3"
  >
    <p>
      Footer
    </p>
  </footer>
</div>
`;

exports[`it works without sidebar 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 45px;
  padding: 2px;
  line-height: 45px;
}

.c1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-height: 0;
}

.c2 {
  padding: 16px;
}

<div>
  <header
    className="c0"
  >
    <p>
      Header
    </p>
  </header>
  <main
    className="c1"
  >
    <p>
      Main
    </p>
  </main>
  <footer
    className="c2"
  >
    <p>
      Footer
    </p>
  </footer>
</div>
`;
